feat(game): stabilize create game contracts